# hugo-template-dependencies

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
src/hugo_template_dependencies/: __init__.py  __main__.py  cli.py  error_handling.py  progress_reporting.py
src/hugo_template_dependencies/analyzer/: __init__.py  template_discovery.py  template_parser.py
src/hugo_template_dependencies/config/: __init__.py  parser.py  parser_old.py
src/hugo_template_dependencies/graph/: base.py  hugo_graph.py
src/hugo_template_dependencies/modules/: resolver.py
src/hugo_template_dependencies/output/: dot_formatter.py  json_formatter.py  mermaid_formatter.py
tests/: conftest.py  test_config_parser.py  test_dot_formatter.py  test_error_handling.py  test_foo.py  test_json_formatter.py  test_mermaid_formatter.py  test_module_resolver.py  test_template_discovery.py  test_template_parser.py
tests/integration/: test_complete_pipeline.py  test_pipeline_core.py  test_pipeline_formats.py  test_pipeline_patterns.py
tests/mocks/: README.md
tests/mocks/basic_partial_pattern/layouts/: single.html
tests/mocks/basic_partial_pattern/layouts/_partials/: header.html
tests/mocks/cached_partials/layouts/: baseof.html
tests/mocks/cached_partials/layouts/_partials/: analytics.html  head-meta.html
tests/mocks/conditional_partials/layouts/: list.html
tests/mocks/conditional_partials/layouts/_partials/: card-layout.html  default-layout.html  list-layout.html
tests/mocks/context_passing/layouts/: single.html
tests/mocks/context_passing/layouts/_partials/meta/: article-info.html  author-info.html
tests/mocks/function_integration/layouts/: taxonomy.html
tests/mocks/function_integration/layouts/_partials/: badge.html  term-links.html
tests/mocks/inline_partials/layouts/: home.html
tests/mocks/nested_partial_chain/layouts/: index.html
tests/mocks/nested_partial_chain/layouts/_partials/components/: content.html  sidebar.html
tests/mocks/nested_partial_chain/layouts/_partials/components/widgets/: navigation.html
tests/mocks/nested_partial_chain/layouts/_partials/layout/: main.html
tests/mocks/nested_partials_project/layouts/: single.html
tests/mocks/nested_partials_project/layouts/_partials/: recurrence_human_readable.html
tests/mocks/nested_partials_project/layouts/_partials/recurrence/: daily_frequency.html  debug_output.html  monthly_frequency.html  weekly_frequency.html  yearly_frequency.html
tests/mocks/real_world_complex/layouts/_default/: single.html
tests/mocks/real_world_complex/layouts/_partials/analytics/: events.html  tracker.html
tests/mocks/real_world_complex/layouts/_partials/article/: content.html  footer.html  header.html
tests/mocks/real_world_complex/layouts/_partials/meta/: author.html  main.html  published.html  tags.html
tests/mocks/real_world_complex/layouts/_partials/shared/: button.html  icon.html
tests/mocks/shortcode_templates/layouts/_partials/: icon.html  image-processor.html
tests/mocks/shortcode_templates/layouts/shortcodes/: alert.html  figure.html
tests/mocks/template_blocks/layouts/_default/: baseof.html  single.html
tests/unit/: test_architectural_regression.py  test_block_lookup.py  test_cli_helpers.py  test_partial_resolution.py  test_template_classifier.py  test_template_parser.py  test_template_parser.py.bak
