[project]
name = "hugo-template-dependencies"
version = "0.0.1"
description = "Utility for analysing hugo template dependencies"
authors = [{ name = "Oluf Lorenzen", email = "ol+hugotemplatedeps@oluflorenzen.de" }]
readme = "README.md"
keywords = ['python']
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer>=0.9.0",
    "toml>=0.10.2",
    "rich>=13.0.0",
    "graphviz>=0.20.0",
    "click-default-group>=1.2.4",
    "networkx>=3.4.2",
    "jsonschema>=4.17.0",
]

[project.urls]
Homepage = "https://finkregh.github.io/hugo-template-dependencies/"
Repository = "https://github.com/finkregh/hugo-template-dependencies"
Documentation = "https://finkregh.github.io/hugo-template-dependencies/"
[project.scripts]
hugo-template-dependencies = "hugo_template_dependencies.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "ty>=0.0.8",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "types-toml>=0.10.8",
    "uv>=0.9.27",
    "mypy>=1.19.1",
    "types-jsonschema>=4.26.0.20260202",
    "types-networkx>=3.6.1.20251220",
]

[[tool.uv.index]]
url = "https://int.repositories.cloud.sap/artifactory/api/pypi/cia-pip-live/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hugo_template_dependencies"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
select = ["ALL"]
ignore = [
    "D407",   # Missing dashed underline after section ("Returns") # formatting docstrings
    "FA102",  # future-required-type-annotation (FA102) # we dont use old python
    "FA100",  # see above
    "UP015",  # Unnecessary open mode parameters
    "PTH123", # `open()` should be replaced by `Path.open()`
    "C901", # complexity
    "TRY301", #Abstract `raise` to an inner function
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "ANN101",  # missing-type-self # TODO: set proper type hints
    "E501",    # line too long, often used log checks, mocks, ...
    "SLF001", # Private member accessed
]
"stubs/**" = [
    "ALL", # no checks for the autogenerated stubs
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
